Make left and right wall

--- a/섹션11_종합예제_전진_3D_스크롤/yj_index.html
+++ b/섹션11_종합예제_전진_3D_스크롤/yj_index.html
@@ -21,7 +21,7 @@
 
     <!-- 3D 공간 구현 -->
     <div class="world">
-        
+        <!-- 캐릭터와 벽들을 감싸줄 컨테이너 -->
         <div class="stage">
             <div class="house">
                 <section class="wall wall-left"></section>
