--- a/섹션11_종합예제_전진_3D_스크롤/yj_index.html
+++ b/섹션11_종합예제_전진_3D_스크롤/yj_index.html
@@ -11,10 +11,10 @@
 </head>
 
 <body>
-    <!-- <div class="progress-bar-con">
+    <div class="progress-bar-con">
         <div class="progress-bar"></div>
     </div>
-    <div class="select-character">
+    <!-- <div class="select-character">
         <button class="select-character-btn select-character-btn-ilbuni" data-char="ilbuni"></button>
         <button class="select-character-btn select-character-btn-ragirl" data-char="ragirl"></button>
     </div> -->
@@ -28,34 +28,33 @@
                 <section class="wall wall-right"></section>
                 <section class="wall wall-front wall-front-a">
                     <div class="wall-content">
-                        <h2 class="wall-title">안녕하세요</h2>
+                        <h2 class="wall-title">2021년</h2>
                     </div>
                 </section>
                 <section class="wall wall-front wall-front-b">
                     <div class="wall-content">
-                        <h2 class="wall-title">Hello</h2>
+                        <h2 class="wall-title">현유진은</h2>
                     </div>
                 </section>
                 <section class="wall wall-front wall-front-c">
                     <div class="wall-content">
-                        <h2 class="wall-title">Hola</h2>
+                        <h2 class="wall-title">돈을 많이주고 인터렉티브한 웹을 할 수 있는</h2>
                     </div>
                 </section>
                 <section class="wall wall-front wall-front-d">
                     <div class="wall-content">
-                        <h2 class="wall-title">こんにちは</h2>
+                        <h2 class="wall-title">아주 좋은 회사를 가게 될 것이당!!</h2>
                     </div>
                 </section>
             </div>
             <!--// house -->
 
             <!-- 캐릭터 놓이는 곳 -->
-
-        </div>
+            
         <!--// stage -->
     </div>
     <!--// world -->
-
+    <script src="./js/yj_character.js"></script>
     <script src="./js/yj_wall3d.js"></script>
 </body>
 
