--- a/섹션11_종합예제_전진_3D_스크롤/yj_index.html
+++ b/섹션11_종합예제_전진_3D_스크롤/yj_index.html
@@ -14,10 +14,10 @@
     <div class="progress-bar-con">
         <div class="progress-bar"></div>
     </div>
-    <!-- <div class="select-character">
+    <div class="select-character">
         <button class="select-character-btn select-character-btn-ilbuni" data-char="ilbuni"></button>
         <button class="select-character-btn select-character-btn-ragirl" data-char="ragirl"></button>
-    </div> -->
+    </div>
 
     <!-- 3D 공간 구현 -->
     <div class="world">
@@ -50,7 +50,7 @@
             <!--// house -->
 
             <!-- 캐릭터 놓이는 곳 -->
-            
+
         <!--// stage -->
     </div>
     <!--// world -->
