--- a/섹션11_종합예제_전진_3D_스크롤/yj_practice.html
+++ b/섹션11_종합예제_전진_3D_스크롤/yj_practice.html
@@ -11,10 +11,10 @@
 </head>
 
 <body>
-    <!-- <div class="progress-bar-con">
-        <div class="progresaa-bar"></div>
+    <div class="progress-bar-con">
+        <div class="progress-bar"></div>
     </div>
-    <div class="select-character">
+    <!-- <div class="select-character">
         <button class="select-character-btn elect-character-btn-ilbuni" data-char="ilbuni"></button>
         <button class="select-character-btn elect-character-btn-ragirl" data-char="ragirl"></button>
     </div> -->
@@ -55,6 +55,7 @@
     </div>
     <!-- // world -->
 
+    <script src="./js/yj_practice_character.js"></script>
     <script src="./js/yj_practice_wall3d.js"></script>
 </body>
 
