--- a/Intensive/yj_practice/index.html
+++ b/Intensive/yj_practice/index.html
@@ -28,6 +28,61 @@
 				<a href="#">구입하기</a>
 			</div>
 		</nav>
+
+		<section class="scroll-section" id="scroll-section-0">
+			<h1>AirMug Pro</h1>
+			<div class="sticky-elem main-message">
+				<p>온전히 빠져들게하는<br>최고급 세라믹</p>
+			</div>
+			<div class="sticky-elem main-message">
+				<p>주변 맛을 느끼게해주는<br>주변 맛 허용 모드</p>
+			</div>
+			<div class="sticky-elem main-message">
+				<p>온종일 편안하게하는<br>맞춤형 손잡이</p>
+			</div>
+			<div class="sticky-elem main-message">
+				<p>새롭게 입가를<br>찾아온 매혹</p>
+			</div>
+		</section>
+		<section class="scroll-section" id="scroll-section-1">
+			<p class="description">
+				<strong>보통 스크롤 영역</strong>
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi tenetur maxime iusto? Odio quis unde repudiandae similique? Labore blanditiis nostrum, eius, facere iure molestiae neque ducimus voluptatum maiores optio velit ipsa natus placeat et ab impedit, consequuntur modi. Commodi molestias unde placeat repellat, iure nesciunt nihil. Odit unde voluptatum aspernatur reprehenderit dolores quis perferendis beatae eaque dicta laborum eveniet hic delectus culpa, ratione iure dolorem distinctio esse quia sed, numquam quisquam nobis accusantium? Tempora natus quibusdam amet consectetur, libero iure, culpa, optio laboriosam pariatur fuga aliquid. Autem, harum! Explicabo praesentium ducimus veritatis non quaerat. Fugit voluptate illo natus pariatur nam necessitatibus nulla a iusto voluptates repudiandae, ab in ratione inventore, praesentium est at ullam? Unde blanditiis ipsam, amet dolorem libero repellat laudantium cupiditate ullam ea dolores perspiciatis excepturi illo aliquam eos. Fugit perferendis repudiandae recusandae neque rem harum ipsa, quaerat ex iste quisquam! Vel voluptatem fugiat magnam adipisci atque eum ut id culpa ipsum tempora reiciendis nobis eos est perferendis dolore temporibus odio, debitis possimus aspernatur reprehenderit. Consequatur incidunt facilis minus culpa sint at qui iure similique animi, distinctio quia consectetur error reiciendis ad, exercitationem dolor perspiciatis. Fugiat qui, unde, mollitia illo libero deleniti officia tempora exercitationem, at hic veritatis.
+			</p>
+		</section>
+		<section class="scroll-section" id="scroll-section-2">
+			<div class="sticky-elem main-message">
+				<p>
+					<small>편안한 촉감</small>
+					입과 하나 되다
+				</p>
+			</div>
+			<div class="sticky-elem desc-message">
+				<p>
+					편안한 목넘김을 완성하는 디테일한 여러 구성 요소들, 우리는 이를 하나하나 새롭게 살피고 재구성하는 과정을 거쳐 새로운 수준의 머그, AirMug Pro를 만들었습니다. 입에 뭔가 댔다는 감각은 어느새 사라지고 오롯이 당신과 음료만 남게 되죠.
+				</p>
+				<div class="pin"></div>
+			</div>
+			<div class="sticky-elem desc-message">
+				<p>
+					디자인 앤 퀄리티 오브 스웨덴,<br>메이드 인 차이나
+				</p>
+				<div class="pin"></div>
+			</div>
+		</section>
+		<section class="scroll-section" id="scroll-section-3">
+			<p class="mid-message">
+				<strong>Retina 머그</strong><br>
+				아이디어를 광활하게 펼칠<br>
+				아름답고 부드러운 음료 공간.
+			</p>
+			<p class="canvas-caption">
+				Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eveniet at fuga quae perspiciatis veniam impedit et, ratione est optio porro. Incidunt aperiam nemo voluptas odit quisquam harum in mollitia. Incidunt minima iusto in corporis, dolores velit. Autem, sit dolorum inventore a rerum distinctio vero illo magni possimus temporibus dolores neque adipisci, repudiandae repellat. Ducimus accusamus similique quas earum laborum. Autem tempora repellendus asperiores illum ex! Velit ea corporis odit? Ea, incidunt delectus. Sapiente rerum neque error deleniti quis, et, quibusdam, est autem voluptate rem voluptas. Ratione soluta similique harum nihil vel. Quas inventore perferendis iusto explicabo animi eos ratione obcaecati.
+			</p>
+		</section>
+		<footer class="footer">
+			2021, 1분코딩
+		</footer>
 	</div>
 </body>
 </html>
